my-first-commit

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,37 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+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
+
+git remote add origin https://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@github.com/Ezeuju/alx-low_level_programming.git
+
+git remote set-url origin https://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@github.com/Ezeuju/alx-low_level_programming.git
+
+
+how to install my sqlbd.
+ apt-get install python-dev libmysqlclient-dev
+ pip install MySQL-python
+
+ git remote add origin https://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@github.com/Ezeuju/alx-system_engineering-devops
+
+git remote add origin https://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@github.com/Ezeuju/AirBnB_clone_v2
+ git remote add origin https://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@github.com/Ezeuju/alx-higher_level_programming
+git push --set--upstream origin main
+git remote add origin https://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@github.com/Ezeuju/alx-react
+git remote add origin https://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@github.com/Ezeuju/laptechx
+
+
+
+Kings 5ltrs...7700
+Active 5ltrs..7700
+Golden penny 5ltrs..7750
+Mamador vegetable oil 3.5ltrs...5300
+Lazio vegetable oil 5ltrs.?.8000
+Golden penny soya oil 2.75 l....4150
+Saffola sunflower oil 5ltrs....13500
+Winner soya oil 3ltrs.,,4850
+Golden penny vegetable oil 2.75ltrs....4350
+Golden penny soya oil 2.75 ltrs....4150
+Golden penny soya oil 1ltrs...1600
+Golden penny vegetable oil 1ltrs...1600
